--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="Jp188 merupakan situs daftar dan bermain judi slot online terpercaya Jp188 link alternatif login dengan berbagai macam permainan gacor." />
         <link itemprop="mainEntityOfPage" rel="canonical" href="http://jp188.online.hudsonhouseinn.com/" />
 		<link rel="amphtml" href="https://agensloto.online/jp188copy/">
+	      <meta name="google-site-verification" content="XfNFYOrwFcS6ej-viiQE-C0WzU40LoocG-kuWDvoj_o" />
         <link rel="shortcut icon" href="https://i.ibb.co/2ZCSw84/116873-1680335967.png" sizes="16x16">
         <link href="http://jp188.online.hudsonhouseinn.com/" rel="dns-prefetch">
         <meta name="keywords" content="Jp188, Jp188 slot, Jp188 rtp, Jp188 demo, Jp188 claim, Jp188 bonus, Jp188 alternatif, Jp188 login" />
